# Fas2Lsp

./: PDI(new).lsp  PDI(test).lsp  PDI.lsp  PDI_new.lsp  PurgeDictionaryItems[PDI].fas  PurgeDictionaryItems[PDI].lsp  README.md  README_DECOMPILATION_STATUS.md  analyze_bytecode_deep.py  analyze_bytecode_for_strings.py  analyze_bytecode_structure.py  analyze_decrypted.py  analyze_fas.py  analyze_fas4_structure.py  check_file_structure.py  create_test_fas.py  decompile.py  decompile_any.py  decompile_fas4.py  deep_analyze_fas4.py  deep_bytecode_analysis.py  extract_fas4_strings.py  fas4_bytecode_analyzer.py  find_real_strings.py  fix_indent.py  pyproject.toml  reverse_engineer_bytecode.py  reverse_engineer_fas4.py  reverse_engineer_fas4_clean.py  test.fas  test.lsp  test_decompress.py  test_fas4_decoding.py  test_output.lsp
server/: __init__.py  fas4_bytecode_interpreter.py  fas4_parser.py  fas4_real_decompiler.py  fas_parser.py  server.py
